Finished animaiton for 4 COMMON TYPES section Need to add images and content.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <!-- COMMON CAUSES OF DEMENTIA SECTION -->
         <!-- <div class="contentSection" style="height: 100vh; display:block;"> -->
 
-        <div class="contentSection" style="flex-wrap:wrap; padding:12% 7% 12% 7%; align-items:center; justify-content:center;">
+        <div class="contentSection" style="flex-wrap:wrap; padding:12vh 7vh 12vh 7vh; align-items:center; justify-content:center; min-height: 100vh;">
             <div style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">4 MAIN CAUSES</div>
                 <sl-button onclick="topFunction()" class="rttFlower">
@@ -244,6 +244,10 @@
                     </div>
                 </sl-card>
             </div>
+            <sl-dialog label="Type 3" id="dementiaDialog1" class="dialog-overview" style="color:black;">
+                This type of dementia kinda sucks... I mean, they all do, but this one is particularly shit. Why, you ask? I have no idea. Just because!
+                <sl-button slot="footer" type="primary">Close</sl-button>
+            </sl-dialog>
             <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
                 <sl-card class="card-overview">
                     <div class="cardImageContainer">
@@ -261,6 +265,10 @@
                     </div>
                 </sl-card>
             </div>
+            <sl-dialog label="Type 4" id="dementiaDialog1" class="dialog-overview" style="color:black;">
+                This type of dementia kinda sucks... I mean, they all do, but this one is particularly shit. Why, you ask? I have no idea. Just because!
+                <sl-button slot="footer" type="primary">Close</sl-button>
+            </sl-dialog>
             <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
                 <sl-card class="card-overview">
                     <div class="cardImageContainer">
