--- a/index.html
+++ b/index.html
@@ -532,15 +532,15 @@
             </div>
         </div>
         <div class="parallax"></div>
-        <div class="contentSection" style="flex-wrap:wrap; padding:12% 7% 12% 7%; align-items:center; justify-content:center;">
+        <div class="contentSection" style="flex-wrap:wrap; padding:10vh 0; align-items:center; justify-content:center;">
             <div style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">GALLERY</div>
                 <sl-button onclick="topFunction()" class="rttFlower">
-                    <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                    <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower"/>
                 </sl-button>
             </div>
             <sl-dialog id="galleryImage1" class="dialog-overview" no-header="true">
-                <img src="images/FMN_flower.svg" alt="img1?">
+                <img src="images/FMN_flower.svg" alt="img1?" style="height: auto; width: auto;">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6">
                 <sl-card class="card-basic" id="photoCard1">
