Minor changes to GALLERY section

--- a/index.html
+++ b/index.html
@@ -532,11 +532,11 @@
             </div>
         </div>
         <div class="parallax"></div>
-        <div class="contentSection" style="flex-wrap:wrap; padding:10vh 0; align-items:center; justify-content:center;">
+        <div class="contentSection" style="flex-wrap:wrap; padding:10vh 5vw; align-items:center; justify-content:center;">
             <div style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">GALLERY</div>
                 <sl-button onclick="topFunction()" class="rttFlower">
-                    <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower"/>
+                    <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                 </sl-button>
             </div>
             <sl-dialog id="galleryImage1" class="dialog-overview" no-header="true">
