Fixed content sections overshoot issue with pinning

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <!-- COMMON CAUSES OF DEMENTIA SECTION -->
         <!-- <div class="contentSection" style="height: 100vh; display:block;"> -->
 
-        <div class="contentSection" style="flex-wrap:wrap; padding:12vh 7vh 12vh 7vh; align-items:center; justify-content:center; min-height: 100vh;">
+        <div class="contentSection pinSection" style="flex-wrap:wrap; padding:12vh 7vh 12vh 7vh; align-items:center; justify-content:center; min-height: 100vh;">
             <div style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">4 MAIN CAUSES</div>
                 <sl-button onclick="topFunction()" class="rttFlower">
@@ -406,7 +406,7 @@
             </div>
         </div>
         <div class="parallax"></div>
-        <div class="contentSection">
+        <div class="contentSection pinSection">
             <div style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">LIVING WITH DEMENTIA</div>
                 <sl-button onclick="topFunction()" class="rttFlower">
@@ -514,7 +514,7 @@
             </div>
         </div>
         <div class="parallax"></div>
-        <div class="contentSection">
+        <div class="contentSection pinSection">
             <div style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">REDUCING RISKS</div>
                 <sl-button onclick="topFunction()" class="rttFlower">
@@ -532,7 +532,7 @@
             </div>
         </div>
         <div class="parallax"></div>
-        <div class="contentSection" style="flex-wrap:wrap; padding:10vh 5vw; align-items:center; justify-content:center;">
+        <div class="contentSection pinSection" style="flex-wrap:wrap; padding:10vh 5vw; align-items:center; justify-content:center;">
             <div style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">GALLERY</div>
                 <sl-button onclick="topFunction()" class="rttFlower">
