Added some photos to gallery

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                 <div class="cardContainer dementiaTypeCard col-3 col-xs-6 ">
                     <sl-card class="card-overview ">
                         <div class="cardImageContainer ">
-                            <img class="cardImage " src="./images/BloodCholesterol_39043222_M.jpg " alt="A kitten sits patiently between a terracotta pot and decorative grasses. ">
+                            <img class="cardImage " src="./images/BloodCholesterol_39043222_M.jpg " alt="Image of constricted arteries ">
                         </div>
                         <div class="contentImageContainer ">
                             <div class="centeredText ">
@@ -567,7 +567,7 @@
                 <div class="cardContainer dementiaTypeCard col-3 col-xs-6 ">
                     <sl-card class="card-overview ">
                         <div class="cardImageContainer ">
-                            <img class="cardImage " src="./images/Physical_Activity_404369521_web-1100x551.jpg " alt="A kitten sits patiently between a terracotta pot and decorative grasses. ">
+                            <img class="cardImage " src="./images/Physical_Activity_404369521_web-1100x551.jpg " alt="Image of oleder people being physically active ">
                         <!-- Image sourced from Norwegian SciTech News on 11 Feb 21
                         https://norwegianscitechnews.com/2018/09/does-weather-influence-older-adults-physical-activity/ -->
                         </div>
@@ -588,7 +588,7 @@
                 <div class="cardContainer dementiaTypeCard col-3 col-xs-6 ">
                     <sl-card class="card-overview ">
                         <div class="cardImageContainer ">
-                            <img class="cardImage " src="./images/Diabetes_AP_090103041332-768x432.jpg " alt="A kitten sits patiently between a terracotta pot and decorative grasses. ">
+                            <img class="cardImage " src="./images/Diabetes_AP_090103041332-768x432.jpg " alt="Imgae of diabetes test being conducted ">
                         <!-- Image sourced from Statnews.com on 11 Feb 21
                         https://www.statnews.com/2020/10/01/why-people-with-diabetes-are-being-hit-so-hard-by-covid-19/ -->
                         </div>
@@ -609,7 +609,7 @@
                 <div class="cardContainer dementiaTypeCard col-3 col-xs-6 ">
                     <sl-card class="card-overview ">
                         <div class="cardImageContainer ">
-                            <img class="cardImage " src="./images/Social_Contact_aa9c1a0a-11cd-11e6-a855-9958039a7c6d.webp " alt="A kitten sits patiently between a terracotta pot and decorative grasses. ">
+                            <img class="cardImage " src="./images/Social_Contact_aa9c1a0a-11cd-11e6-a855-9958039a7c6d.webp " alt="Image of older gentlement socially interacting and playing cards ">
                         <!-- Image sourced from hunustantimes.com on 11 Feb 21
                         https://www.hindustantimes.com/health-and-fitness/social-engagement-reduces-depression-in-older-dementia-patients/story-RyQgqfZOfKVnnmHTD8ERsL.html -->
                         </div>
@@ -643,67 +643,68 @@
                 </sl-button>
             </div>
             <sl-dialog id="galleryImage1 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? " style="height: auto; width: auto; ">
+                <img src="images/Alzheimers_pathology.png " alt="img1? " class="cardImage " style="height: auto; width: auto; ">
+            <!-- MOyra slides... -->
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard1 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="images/Alzheimers_pathology.png " alt=" " />
                 </sl-card>
             </div>
-            <sl-dialog id="galleryImage2 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? ">
+            <sl-dialog id="galleryImage2 " class="dialog-overview cardThumbnailImage " no-header="true ">
+                <img src="images/FTD_MRI_89804cd4fef6bb7709230e6f6bfaba_big_gallery.jpg " alt="img1? " class="cardImage ">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard2 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="images/FTD_MRI_89804cd4fef6bb7709230e6f6bfaba_big_gallery.jpg " alt=" " />
                 </sl-card>
             </div>
-            <sl-dialog id="galleryImage3 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? ">
+            <sl-dialog id="galleryImage3 " class="dialog-overview cardThumbnailImage " no-header="true ">
+                <img src="images/FMN_flower.svg " alt="img1? " class="cardImage ">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard3 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="/images/FMN_flower.svg " alt=" " />
                 </sl-card>
             </div>
-            <sl-dialog id="galleryImage4 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? ">
+            <sl-dialog id="galleryImage4 " class="dialog-overview cardThumbnailImage " no-header="true ">
+                <img src="images/FMN_flower.svg " alt="img1? " class="cardImage ">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard4 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="/images/FMN_flower.svg " alt=" " />
                 </sl-card>
             </div>
-            <sl-dialog id="galleryImage5 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? ">
+            <sl-dialog id="galleryImage5 " class="dialog-overview cardThumbnailImage " no-header="true ">
+                <img src="images/FMN_flower.svg " alt="img1? " class="cardImage ">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard5 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="/images/FMN_flower.svg " alt=" " />
                 </sl-card>
             </div>
-            <sl-dialog id="galleryImage6 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? ">
+            <sl-dialog id="galleryImage6 " class="dialog-overview cardThumbnailImage " no-header="true ">
+                <img src="images/FMN_flower.svg " alt="img1? " class="cardImage ">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard6 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="/images/FMN_flower.svg " alt=" " />
                 </sl-card>
             </div>
-            <sl-dialog id="galleryImage7 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? ">
+            <sl-dialog id="galleryImage7 " class="dialog-overview cardThumbnailImage " no-header="true ">
+                <img src="images/FMN_flower.svg " alt="img1? " class="cardImage ">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard7 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="/images/FMN_flower.svg " alt=" " />
                 </sl-card>
             </div>
             <sl-dialog id="galleryImage8 " class="dialog-overview " no-header="true ">
-                <img src="images/FMN_flower.svg " alt="img1? ">
+                <img src="images/FMN_flower.svg " alt="img1? " class="cardImage ">
             </sl-dialog>
             <div class="cardContainer col-3 col-xs-6 ">
                 <sl-card class="card-basic " id="photoCard8 ">
-                    <img class="cardImage " src="/images/FMN_flower.svg " alt=" " />
+                    <img class="cardThumbnailImage " src="/images/FMN_flower.svg " alt=" " />
                 </sl-card>
             </div>
             <div class="contentSectionBG ">
